line spacing fix

--- a/style.css
+++ b/style.css
@@ -288,6 +288,8 @@ h4,
 
 .thoughs {
     font-family: var(--H);
+    font-size: 1.4em;
+    font-weight: bold;
 }
 
 .author-details .details {
@@ -297,7 +299,7 @@ h4,
 
 .article p {
     padding-bottom: 15px;
-    line-height: 160%;
+    line-height: 130%;
 }
 
 .main-article-body {
